# synthetix

./: .gitignore  CMakeLists.txt  README.md
examples/: 4-digit-number.synx  custom-character-set.synx  gmail-address.synx  password.synx
src/: block.cpp  block.h  comment-parser.cpp  comment-parser.h  common.h  custom-set-parser.cpp  custom-set-parser.h  line-parser.h  metadata-parser.cpp  metadata-parser.h  parser.cpp  parser.h  pattern.cpp  pattern.h  scoped-timer.h  sequence-parser.cpp  sequence-parser.h  synthetix.cpp  terminal.cpp  terminal.h
synthetix/: CMakeLists.txt  synthetix-presets
synthetix/src/: common.h  parser.cpp  pattern.h  scoped-timer.cpp
